# bigint

./: CMakeLists.txt  README.md  conanfile.py
cmake/: bigint23Config.cmake.in  bigintConfig.cmake.in
include/bigint/: bigint.h
include/bigint23/: bigint.h  bigint.hpp  bigint23.h
tests/: CMakeLists.txt  arithmetic_tests.cpp  assign_and_equals_tests.cpp  binary_tests.cpp  byteswap.cpp  comparison_tests.cpp  functions_tests.cpp  io_tests.cpp
